structure and css of the site is done

--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Table Example</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
+    <div class="input-container" id="container">
+        <h1>Input Information</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th> First Name</th>
+                    <th> Last Name</th>
+                    <th> Grade</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><input placeholder="Enter the first name" /></td>
+                    <td><input placeholder="Enter the last name" /></td>
+                    <td><input placeholder="Enter the grade" /></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="output-container" id="container">
+        <h1>Output Information</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th> First Name</th>
+                    <th> Last Name</th>
+                    <th> Grade</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><input placeholder="Enter the first name" /></td>
+                    <td><input placeholder="Enter the last name" /></td>
+                    <td><input placeholder="Enter the grade" /></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
-                
+
 </html>
