basic table is complete

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="input-container" id="container">
+    <div class="container" id="input-container">
         <h1>Input Information</h1>
         <table>
             <thead>
@@ -23,15 +23,15 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><input placeholder="Enter the first name" /></td>
-                    <td><input placeholder="Enter the last name" /></td>
-                    <td><input placeholder="Enter the grade" /></td>
+                    <td><input id="first-name-input" placeholder="Enter the first name" /></td>
+                    <td><input id="last-name-input" placeholder="Enter the last name" /></td>
+                    <td><input id="grade-input" placeholder="Enter the grade" /></td>
                 </tr>
             </tbody>
         </table>
     </div>
-    <div class="output-container" id="container">
-        <h1>Output Information</h1>
+    <div class="container" id="output-container">
+        <!-- <h1>Output Information</h1>
         <table>
             <thead>
                 <tr>
@@ -47,8 +47,10 @@
                     <td><input placeholder="Enter the grade" /></td>
                 </tr>
             </tbody>
-        </table>
+        </table> -->
     </div>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
