number is changed grade input

--- a/index.html
+++ b/index.html
@@ -16,38 +16,27 @@
         <table>
             <thead>
                 <tr>
-                    <th> First Name</th>
-                    <th> Last Name</th>
-                    <th> Grade</th>
+                    <th> First Name </th>
+                    <th> Last Name </th>
+                    <th> Grade </th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td><input id="first-name-input" placeholder="Enter the first name" /></td>
-                    <td><input id="last-name-input" placeholder="Enter the last name" /></td>
-                    <td><input id="grade-input" placeholder="Enter the grade" /></td>
+                    <td>
+                        <input id="first-name-input" placeholder="Enter the first name" type="text" />
+                    </td>
+                    <td>
+                        <input id="last-name-input" placeholder="Enter the last name" type="text" />
+                    </td>
+                    <td>
+                        <input id="grade-input" placeholder="Enter the grade" type="number" />
+                    </td>
                 </tr>
             </tbody>
         </table>
     </div>
     <div class="container" id="output-container">
-        <!-- <h1>Output Information</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th> First Name</th>
-                    <th> Last Name</th>
-                    <th> Grade</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><input placeholder="Enter the first name" /></td>
-                    <td><input placeholder="Enter the last name" /></td>
-                    <td><input placeholder="Enter the grade" /></td>
-                </tr>
-            </tbody>
-        </table> -->
     </div>
 
     <script src="index.js"></script>
